[package]
name = "nvim-utils"
version = "0.1.1"
edition = "2021"
description = "Utilities for writing neovim plugins in rust"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/willothy/nvim-utils"
keywords = ["neovim", "lua", "plugin", "ffi"]
categories = ["api-bindings", "development-tools::ffi", "text-editors"]

[badges]
maintentance = { status = "actively-developed" }

[features]
default = ["vim", "builder"]
builder = []
vim = []
serde = ["dep:serde", "serde/derive", "mlua/serialize"]
send = ["mlua/send"]
async = ["mlua/async"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
mlua = { version = "0.8.7", features = [
    "luajit",
    "vendored",
    "module"
] }
serde = { version = "1.0.152", features = ["derive"], optional = true }

[dev-dependencies]
fs_extra = "1.3.0"
test-plugin = { path = "test-plugin" }