[package]
name = "nvim-utils"
version = "0.1.3"
edition = "2021"
description = "Utilities for writing neovim plugins in rust"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/willothy/nvim-utils"
keywords = ["neovim", "lua", "plugin", "ffi"]
categories = ["api-bindings", "development-tools::ffi", "text-editors"]

[badges]
maintentance = { status = "actively-developed" }

[features]
default = ["vim", "builder"]
builder = []
vim = []
send = ["mlua/send"]
async = ["mlua/async"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
mlua = { version = "0.8.7", features = [
    "luajit",
    "vendored",
    "module",
    "serialize",
] }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
fs_extra = "1.3.0"
test-plugin = { path = "test-plugin" }
