[package]
name = "nvim-utils"
version = "0.1.12"
edition = "2021"
description = "Utilities for writing neovim plugins in rust"
authors = ["Will Hopkins <willothyh@gmail.com>"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/willothy/nvim-utils"
keywords = ["neovim", "lua", "plugin", "ffi"]
categories = ["api-bindings", "development-tools::ffi", "text-editors"]

[badges]
maintentance = { status = "actively-developed" }

[features]
default = ["vim", "builder"]
builder = []
vim = []
send = ["mlua/send"]
async = ["mlua/async"]
unstable = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["macros", "luajit"]

[dependencies]
mlua = { version = "0.8.7", features = [
	"luajit",
	"vendored",
	"module",
	"serialize",
] }
serde = { version = "1.0.152", features = ["derive"] }
nvim-utils-macros = { version = "0.1.1", path = "macros" }

[dev-dependencies]
fs_extra = "1.3.0"
test-plugin = { path = "test-plugin" }
