[package]
name = "nvim-utils-macros"
version = "0.1.1"
edition = "2021"
authors = ["Will Hopkins <willothyh@gmail.com>"]
description = "Macros for nvim-utils"
license = "MIT"
repository = "https://github.com/willothy/nvim-utils"

[lib]
proc-macro = true

[dependencies]
mlua = { version = "0.8.7", features = ["luajit", "vendored"] }
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = { version = "2.0.13", features = ["full"] }
